@@ -1,2 +1,2 @@
-__version__ = '0.0.9'
+__version__ = '0.0.10'
 
